NIFI-12245: Removed deprecations around flow registry clients