@@ -28,9 +28,9 @@ import org.apache.nifi.web.api.entity.FlowRegistryClientsEntity;
 import java.io.PrintStream;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Result for a RegistryClientsEntity.
@@ -56,20 +56,22 @@ public class RegistryClientsResult extends AbstractWritableResult<FlowRegistryCl
             return;
         }
 
-        final List<FlowRegistryClientDTO> registries = clients.stream().map(FlowRegistryClientEntity::getComponent)
-                .sorted(Comparator.comparing(FlowRegistryClientDTO::getName))
-                .collect(Collectors.toList());
+        final List<FlowRegistryClientDTO> registries = clients.stream()
+            .map(FlowRegistryClientEntity::getComponent)
+            .sorted(Comparator.comparing(FlowRegistryClientDTO::getName))
+            .toList();
 
         final Table table = new Table.Builder()
                 .column("#", 3, 3, false)
                 .column("Name", 20, 36, true)
                 .column("Id", 36, 36, false)
-                .column("Uri", 3, Integer.MAX_VALUE, false)
+            .column("Properties", 3, Integer.MAX_VALUE, false)
                 .build();
 
         for (int i = 0; i < registries.size(); i++) {
-            FlowRegistryClientDTO r = registries.get(i);
-            table.addRow("" + (i+1), r.getName(), r.getId(), r.getUri());
+            FlowRegistryClientDTO clientDto = registries.get(i);
+            final Map<String, String> properties = clientDto.getProperties();
+            table.addRow("" + (i + 1), clientDto.getName(), clientDto.getId(), properties == null ? "" : properties.toString());
         }
 
         final TableWriter tableWriter = new DynamicTableWriter();
